parfait/components/sidebar.css
/* ... */
img[src="chrome://browser/skin/synced-tabs.svg"] {
  content: var(--pf-icon-devices);
}
img[src="chrome://browser/skin/sidebar-collapsed.svg"] {
  content: var(--pf-icon-sidebar);
}
/* bottom strip: icon alignment */
moz-button[view="viewCustomizeSidebar"] { order: 99; }

/* floating sidebar */
@media -moz-pref("sidebar.verticalTabs") and -moz-pref("sidebar.visibility", "hide-sidebar") {
  :root:not([chromehidden~="toolbar"], [taskbartab]):has(#tabbrowser-tabs:not([expanded])) {
    --pf-bookmarks-margin: calc(var(--pf-separation) * 2);
    --pf-fl-sidebar-shadow: 0 0 0 calc(1px * var(--pf-fl-hover, 0)) var(--pf-border-color-light), 0 4px 16px rgba(0, 0, 0, calc(0.1 * var(--pf-fl-hover, 0)));
    --pf-fl-separation: calc(var(--pf-separation) * var(--pf-fl-hover, 0));
    --pf-fl-sidebar-width: calc(var(--pf-sidebar-width) * (1 - var(--pf-fl-hover, 0)));

    /* sidebar */
    #sidebar-main {
      display: flex !important;
      overflow: unset !important;
      position: fixed;
      top: calc(var(--pf-navbar-height) - var(--pf-separation));
      left: calc(var(--pf-fl-separation) - var(--pf-fl-sidebar-width));
      z-index: 3;
      width: var(--pf-sidebar-width);
      height: calc(100% - var(--pf-navbar-height));
      padding-top: var(--pf-separation);
      background: var(--pf-sidebar-bgcolor-1, var(--pf-sidebar-bgcolor));
      border-radius: var(--pf-browser-radius);
      box-shadow: var(--pf-fl-sidebar-shadow);
      transition-property: left, box-shadow;
      transition-duration: var(--pf-ts-25);
      transition-timing-function: var(--pf-fx-sidebar);

      /* fs: options */
      @media -moz-pref("parfait.bg.accent-color") {
        --pf-sidebar-bgcolor: var(--pf-browser-bgcolor);

        @media -moz-pref("parfait.bg.gradient") {
          --pf-sidebar-bgcolor: linear-gradient(var(--pf-bg-gradient-fade), var(--pf-browser-bgcolor));
        }
      }
      @media -moz-pref("parfait.blur.enabled") {
        backdrop-filter: var(--pf-acrylic-filter);
        --pf-sidebar-bgcolor-1: color-mix(in srgb, var(--pf-sidebar-bgcolor), transparent 12%);

        @media -moz-pref("parfait.bg.accent-color") and -moz-pref("parfait.bg.gradient") {
          --pf-sidebar-bgcolor-1: linear-gradient(color-mix(in srgb, var(--pf-bg-gradient-fade), transparent 20%), color-mix(in srgb, var(--pf-browser-bgcolor), transparent 20%));
        }
      }
      /* fs: sidebar trigger point */
      &::before,
      &::after {
        content: "";
        width: var(--pf-fl-trigger-width);
        height: 100%;
        position: absolute;
        top: 0;
      }
      &::before { left: calc(0px - var(--pf-fl-trigger-width)); }
      &::after { right: calc(0px - var(--pf-fl-trigger-width)); }
    }
    &:has(#sidebar-main:hover, .tabbrowser-tab[multiselected]:not([selected]), #tabContextMenu:hover, :is(.tab-group-editor-panel, #tabgroup-preview-panel)[panelopen="true"]) {
      --pf-fl-hover: 1;
    }
    /* fs: separation */
    &:not([inDOMFullscreen]) #tabbrowser-tabbox {
      margin-inline: var(--pf-browser-separation) !important;
      position: relative;
    }
    /* sidebar 2 */
    #sidebar-box {
      margin-inline: var(--pf-browser-separation) 0 !important;
      --space-small: 0;
    }
    #sidebar-splitter:not([hidden]) + #tabbrowser-tabbox {
      margin-inline: 0 var(--pf-browser-separation) !important;
    }
    /* display tab contents */
    #pinned-tabs-container[orient="vertical"] {
      margin: calc(0px - var(--tab-block-margin));
      padding-inline: calc(var(--tab-block-margin) * 3) !important;
      --tab-min-height: var(--pf-pinned-height);
      --tab-height-with-margin-padding: calc(var(--pf-pinned-height) + (var(--tab-block-margin) * 4));

      .tab-background {
        --tab-block-margin: var(--tab-pinned-margin-inline-expanded);
        --tab-inner-inline-margin: var(--tab-pinned-margin-inline-expanded);
      }
    }
    .tab-background {
      width: unset !important;
    }
    .tabbrowser-tab {
      max-width: unset !important;

      &[pinned] {
        width: unset !important;
      }
      &:not([pinned]) {
        .tab-label-container {
          display: flex !important;
        }
        .tab-throbber,
        &:not([soundplaying]) .tab-icon-image {
          margin-inline-end: var(--tab-icon-end-margin);
        }
        .tab-close-button {
          width: 24px !important;
          height: 24px !important;
          margin-inline-end: calc(var(--tab-close-button-padding) / -2) !important;
          padding: var(--tab-close-button-padding) !important;
          background: transparent !important;
          position: unset !important;
          --tab-selected-shadow: none;
          --tab-selected-outline-color: transparent;
          --border-radius-circle: var(--pf-border-radius-sm);

          &:hover {
            background-color: var(--pf-toolbar-bgcolor-hover) !important;
          }
        }
        .tab-icon-overlay[soundplaying] {
          display: none;
        }
        .tab-audio-button[soundplaying] {
          display: flex !important;
          margin-left: 2px;
        }
      }
    }
    tab-group {
      --pf-tab-group-indent-1: var(--pf-tab-group-indent);
    }
    .tab-group-label {
      font-size-adjust: unset !important;
    }
    .tab-group-label-container,
    .tab-group-line {
      --dragover-tab-group-color: transparent;
      --tab-group-line-color: transparent;
    }
    #tabs-newtab-button,
    #vertical-tabs-newtab-button {
      width: 100% !important;

      .toolbarbutton-text {
        display: flex !important;
      }
    }
    #vertical-tabs-newtab-button {
      width: auto !important;
    }
  }
  .actions-list[orientation="vertical"] {
    flex-direction: row !important;
    align-items: center !important;
  }
}
/* ... */

